fixInspection